factor out log_reader

--- a/tools/SensorDashboard.ipynb
+++ b/tools/SensorDashboard.ipynb
@@ -36,53 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "def micros(seconds):\n",
-    "    return int(seconds*1e6)\n",
-    "\n",
-    "class SensorReader(object):\n",
-    "    def __init__(self, dbname):\n",
-    "        self.conn = sqlite3.connect(dbname)\n",
-    "        self.conn.row_factory = sqlite3.Row\n",
-    "        \n",
-    "    def read(self, start, end, datatype=None):\n",
-    "        args = micros(start), micros(end)\n",
-    "        query = (\"select *from sensordata \"\n",
-    "                 \"where time_usec > ? and time_usec < ?\")\n",
-    "        if datatype is not None:\n",
-    "            if '/' not in datatype:\n",
-    "                datatype = \"type.googleapis.com/\"+datatype\n",
-    "            args += (datatype,)\n",
-    "            query += \" and type_url = ?\"\n",
-    "\n",
-    "        query += \" order by time_usec desc\"\n",
-    "            \n",
-    "        cur = self.conn.cursor()\n",
-    "        cur.execute(query, args)\n",
-    "        for elem in cur:\n",
-    "            yield elem\n",
-    "            \n",
-    "    def __del__(self):\n",
-    "        self.conn.close()"
+    "from desmond.perception.log_reader import SqliteLogReader\n",
+    "r = SqliteLogReader(params['database'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = SensorReader(params['database'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
